[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprites/cavestuff/cave_06.png" type="Texture" id=1]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Levels/0.0 Cave/Crate.tscn" type="PackedScene" id=3]
[ext_resource path="res://BG.tscn" type="PackedScene" id=4]
[ext_resource path="res://Levels/0.0 Cave/PuzzleCave5.gd" type="Script" id=5]
[ext_resource path="res://Brains/SpawnPoint.tscn" type="PackedScene" id=6]
[ext_resource path="res://Characters/salamanders/Gilby.tscn" type="PackedScene" id=7]
[ext_resource path="res://hitnhurtboxes/TransitionZone.tscn" type="PackedScene" id=8]
[ext_resource path="res://Cameras/PuppyCamera.tscn" type="PackedScene" id=9]
[ext_resource path="res://world/Sign.tscn" type="PackedScene" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 58.1914, 35.948 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 104.094, 22.4471 )

[node name="PuzzleCave5" type="Node2D"]
position = Vector2( -2.09241, -4.18497 )
script = ExtResource( 5 )

[node name="cave_06" type="Sprite" parent="."]
position = Vector2( 926.557, 555.483 )
texture = ExtResource( 1 )

[node name="YSort" type="YSort" parent="."]

[node name="player" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 943.029, 825.842 )
camera = NodePath("../../../PuzzleCave5/PuppyCamera")

[node name="Gilby" parent="YSort" instance=ExtResource( 7 )]
position = Vector2( 1454.18, 955.013 )
splash = true
talk_radius = 3
watch_player = true
appear_delay = 0.1

[node name="Crates" type="YSort" parent="YSort"]

[node name="Crate" parent="YSort/Crates" instance=ExtResource( 3 )]
position = Vector2( 966.942, 495.798 )
is_special_talky_cube = true

[node name="Crate3" parent="YSort/Crates" instance=ExtResource( 3 )]
position = Vector2( 843.284, 404.364 )
is_special_talky_cube = true

[node name="Crate4" parent="YSort/Crates" instance=ExtResource( 3 )]
position = Vector2( 840.451, 497.064 )
is_special_talky_cube = true

[node name="Crate5" parent="YSort/Crates" instance=ExtResource( 3 )]
position = Vector2( 966.97, 645.986 )
is_special_talky_cube = true

[node name="Crate6" parent="YSort/Crates" instance=ExtResource( 3 )]
position = Vector2( 1210.72, 522.65 )
is_special_talky_cube = true

[node name="Crate7" parent="YSort/Crates" instance=ExtResource( 3 )]
position = Vector2( 711.058, 520.069 )
is_special_talky_cube = true

[node name="Crate2" parent="YSort/Crates" instance=ExtResource( 3 )]
position = Vector2( 1089.98, 408.666 )
is_special_talky_cube = true

[node name="Sign" parent="YSort" instance=ExtResource( 10 )]
position = Vector2( 547.954, 823.098 )
text = "Violence isn't always the answer... Sometimes you can talk through your problems!"

[node name="BG" parent="." instance=ExtResource( 4 )]
margin_left = -737.285
margin_top = -817.368
margin_right = 2779.71
margin_bottom = 1969.63

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( -3.17896, 6.35803 )
polygon = PoolVector2Array( 879.448, 375.855, 545.651, 398.108, 342.194, 483.942, 265.897, 649.251, 326.299, 836.813, 539.293, 938.542, 691.886, 979.869, 847.658, 1021.2, 869.911, 1072.06, 1076.55, 1052.99, 1098.8, 995.764, 1321.33, 976.69, 1378.55, 916.289, 1438.96, 887.677, 1493, 814.56, 1518.43, 639.714, 1493, 464.868, 1407.17, 382.213, 1041.58, 375.855, 1016.15, 131.071, 1829.97, 169.219, 1795.01, 1161.07, 78.335, 1145.18, 91.0511, 89.7434, 869.911, 108.817 )

[node name="TopSpawnPoint" parent="." instance=ExtResource( 6 )]
position = Vector2( 960.133, 427.944 )

[node name="BottomSpawnPoint" parent="." instance=ExtResource( 6 )]
position = Vector2( 945.058, 977.46 )

[node name="UpperTZ" parent="." instance=ExtResource( 8 )]
position = Vector2( 955.858, 310.519 )

[node name="CollisionShape2D" parent="UpperTZ" index="0"]
shape = SubResource( 1 )

[node name="LowerTZ" parent="." instance=ExtResource( 8 )]
position = Vector2( 945.058, 1074.67 )

[node name="CollisionShape2D" parent="LowerTZ" index="0"]
position = Vector2( 8.10046, 0 )
shape = SubResource( 2 )

[node name="PuppyCamera" parent="." instance=ExtResource( 9 )]
position = Vector2( 975.479, 576.134 )

[node name="UpperLeft" parent="PuppyCamera/Limits" index="0"]
position = Vector2( -363.693, -517.348 )

[node name="BottomRight" parent="PuppyCamera/Limits" index="1"]
position = Vector2( 2438.91, 1562.15 )

[connection signal="transition_triggered" from="UpperTZ" to="." method="_on_UpperTZ_transition_triggered"]
[connection signal="transition_triggered" from="LowerTZ" to="." method="_on_LowerTZ_transition_triggered"]

[editable path="UpperTZ"]
[editable path="LowerTZ"]
[editable path="PuppyCamera"]
